vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Hashicorp Vault
    gethomepage.dev/description: A tool for secrets management, encryption as a service, and privileged access management
    gethomepage.dev/group: Cluster
    gethomepage.dev/icon: hashicorp-vault
    gethomepage.dev/pod-selector: ""
spec:
  ingressClassName: traefik
  rules:
    - host: vault.services.sbling.net
      http:
        paths:
          - backend:
              service:
                name: vault-ui
                port:
                  number: 8200
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - vault.services.sbling.net
      secretName: vault-services-sbling-net-prod-cert
